# CPT-Konsilium

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  config.mac.yaml.example  config.yaml.example  docker-compose.mac.yml  pyproject.toml
docs/: decisions.md
konsilium/: __init__.py  __main__.py  config.py  declutter.py  deid.py  egress.py  gliner_deid.py  ingest.py  knowledge.py  letters.py  mcp_server.py  memory.py  model_client.py  monitor.py  ollama_deid.py  research.py  review.py  roles.py  smoke.py  util.py
konsilium/providers/: __init__.py  _oauth.py  base.py  claude_cli.py  codex.py  codex_responses.py  credential_pool.py  custom.py  xai_oauth.py
roles/: endocrinologist.md  internist.md  neurologist.md
tests/: test_cli.py  test_declutter.py  test_mcp_server.py  test_memory_safety.py  test_model_providers.py  test_resilience.py  test_stage1.py  test_stages_1_3.py
