[project]
name = "konsilium"
version = "0.0.1"
description = "Medical reasoning agent bootstrap with local de-identification boundaries"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40",
    "httpx>=0.27",
    "lancedb>=0.9",
    "mcp>=1.0",
    "pydantic>=2.7",
    "pypdf>=4.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = ["konsilium*"]

[tool.ruff]
line-length = 100
